<resources>
    <string name="app_name">Streamer</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>


    <string name="pref_category_video">Video Sync</string>

    <string name="pref_title_ip">IP Address</string>
    <string name="pref_default_ip">192.10.9.96</string>
    <string name="pref_hint_ip">192.10.9.96</string>

    <string name="pref_title_video_port">Video Stream Port</string>
    <string name="pref_default_video_port">1108</string>
    <string name="pref_hint_video_port">1108</string>

    <string name="pref_title_hide_about_section">Hide About Section</string>
    <bool name="pref_default_hide_about_section">false</bool>
    <bool name="pref_hide_about_section">false</bool>

    <string name="pref_title_video_address">Video address</string>
    <string name="pref_default_video_address">live.mjpg</string>
    <string name="pref_hint_video_address">live.mjpg</string>

    <string name="title_activity_settings">Settings</string>





    <string name="about">About</string>
    <string name="display_text">App streams video by default at http://192.10.9.96:1108/live.mjpg</string>
    <string name="title_activity_about">About</string>
    <string name="large_text">
        "By default this app Streams video at - http://192.10.9.96:1108/live.mjpg\n\nPlease use a"
        "16:9 ratio video for proper view.\n"
    </string>
    <string name="developed_by">Developed By -</string>
    <string name="anant_singh">Anant Singh</string>

</resources>
